--- a/index.css
+++ b/index.css
@@ -31,10 +31,12 @@ font-weight: bold;
 cursor: pointer;
 display: inline;}
 
-footer{
-    margin-top: 15px;
-    margin-bottom: 5px;
-    font-size: 15px;
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
 }
 .container {
     background:#EBF4F6;
@@ -85,3 +87,35 @@ margin-top: -8px;
 }
 .weather-info { display: flex;
 justify-content: space-between;}
+
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #ec9119;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
+
